# repository-metadata-action

./: .pre-commit-config.yaml  README.md  action.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release-drafter.yaml  semantic-pull-request.yaml  sha-pinned-actions.yaml  tag-push.yaml  test-gerrit-metadata.yaml  testing.yaml
docs/: CHANGES_SUMMARY.md  YAML_SUPPORT.md
src/: __init__.py  config.py  constants.py  exceptions.py  git_operations.py  github_api.py  main.py  models.py  validators.py
src/extractors/: __init__.py  actor.py  base.py  cache.py  changed_files.py  commit.py  event.py  gerrit.py  pull_request.py  ref.py  repository.py
src/formatters/: __init__.py  artifact_generator.py  json_formatter.py  markdown_formatter.py  yaml_formatter.py
src/utils/: __init__.py
tests/: __init__.py  test-fixes.sh  test_actor_extractor.py  test_artifact_generator.py  test_cache_extractor.py  test_changed_files_extractor.py  test_commit_extractor.py  test_config.py  test_event_extractor.py  test_git_operations.py  test_github_api.py  test_integration_basic.py  test_main.py  test_models.py  test_pull_request_extractor.py  test_ref_extractor.py  test_repository_extractor.py  test_validators.py
