# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Linux Foundation

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "repository-metadata-action"
dynamic = ["version"]
description = "GitHub Action for extracting comprehensive repository metadata"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    {name = "The Linux Foundation", email = "info@linuxfoundation.org"}
]
keywords = ["github", "actions", "metadata", "ci-cd", "gerrit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "PyGithub>=2.1.0,<3.0.0",
    "GitPython>=3.1.0,<4.0.0",
    "PyYAML>=6.0,<7.0",
    "typing-extensions>=4.5.0",
    "ijson>=3.2.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.0,<4.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.5.0,<2.0.0",
]

[project.urls]
Homepage = "https://github.com/lfit/releng-lftools"
Documentation = "https://github.com/lfit/releng-lftools/blob/main/README.md"
Repository = "https://github.com/lfit/releng-lftools"
Issues = "https://github.com/lfit/releng-lftools/issues"

[project.scripts]
repository-metadata = "src.main:main"

# Hatchling build configuration
[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/requirements.txt",
    "/README.md",
    "/LICENSE",
]

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "YTT", # flake8-2020
    "S",   # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "FLY", # flynt
    "PERF", # perflint
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise from within except (intentional in some error handling)
    "C901",   # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR1714", # consider merging comparisons (sometimes less readable)
    "PLW0603", # global statement (intentional for singleton config)
    "PLW2901", # loop variable overwritten (intentional in parsing)
    "S603",   # subprocess call - we use subprocess for git
    "S607",   # partial executable path - git is expected in PATH
    "S108",   # /tmp usage - acceptable for fallback paths
    "TRY003", # long messages outside exception class
    "TRY300", # else after return (sometimes clearer with explicit else)
    "TRY301", # raise in try (acceptable pattern)
    "TRY400", # logging.error vs logging.exception (we handle exceptions explicitly)
    "FBT001", # boolean positional arg
    "FBT002", # boolean default arg
    "A003",   # builtin attribute shadowing
    "PLR2004", # magic value comparison
    "SIM108", # use ternary operator
    "COM812", # trailing comma missing (conflicts with formatter)
    "ISC001", # implicit string concatenation (conflicts with formatter)
    "TID252", # prefer absolute imports (relative imports are fine in packages)
    "BLE001", # blind except (intentional for robust error handling)
    "PTH123", # open() vs Path.open() (both are acceptable)
    "RET504", # unnecessary assignment before return (sometimes clearer)
    "RET505", # unnecessary else/elif after return (sometimes clearer)
    "PERF203", # try-except in loop (acceptable when needed)
    "PIE790", # unnecessary pass (used for empty exception classes)
    "UP024",  # aliased errors (OSError vs IOError compatibility)
    "PLC0415", # import outside top-level (needed for conditional imports)
    "RUF012", # mutable class attributes (intentional for constants)
    "T201",   # print statements (used in main.py for CLI output)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = [
    "S101",   # assert allowed in tests
    "S105",   # hardcoded passwords in tests
    "S106",   # hardcoded passwords in function arguments in tests
    "PLR2004", # magic values in tests
    "PT018",  # assertion complexity in tests
    "RUF059", # unused unpacked variables in tests
    "SIM105", # contextlib.suppress in tests
    "SLF001", # private member access in tests (intentional for unit testing)
    "F841",   # unused local variables in tests (logging tests)
    "PLC0415", # import outside top-level in tests (module resets)
    "ARG002", # unused arguments in tests (fixtures for side effects)
    "PTH123", # open() vs Path.open() in tests (both acceptable)
    "B007",   # unused loop variable in tests
    "PT019",  # fixture without value is injected as parameter
    "SIM117", # nested with statements (sometimes clearer)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["call-arg", "var-annotated", "assignment"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
